@@ -149,6 +149,7 @@
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES" : "6"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_INSTANCE_TX" : "9"
     , "RL_SHADER_LOC_MAP_DIFFUSE" : null
     , "RL_SHADER_LOC_MAP_SPECULAR" : null
     , "CONFIG_H" : null
