@@ -260,18 +260,23 @@ module Raylib
   SHADER_LOC_VERTEX_BONEIDS = 26     # Shader location: vertex attribute: boneIds
   SHADER_LOC_VERTEX_BONEWEIGHTS = 27 # Shader location: vertex attribute: boneWeights
   SHADER_LOC_BONE_MATRICES = 28      # Shader location: array of matrices uniform: boneMatrices
+  SHADER_LOC_VERTEX_INSTANCE_TX = 29 # Shader location: vertex attribute: instanceTransform
 
   # enum ShaderUniformDataType
   # Shader uniform data type
-  SHADER_UNIFORM_FLOAT = 0     # Shader uniform type: float
-  SHADER_UNIFORM_VEC2 = 1      # Shader uniform type: vec2 (2 float)
-  SHADER_UNIFORM_VEC3 = 2      # Shader uniform type: vec3 (3 float)
-  SHADER_UNIFORM_VEC4 = 3      # Shader uniform type: vec4 (4 float)
-  SHADER_UNIFORM_INT = 4       # Shader uniform type: int
-  SHADER_UNIFORM_IVEC2 = 5     # Shader uniform type: ivec2 (2 int)
-  SHADER_UNIFORM_IVEC3 = 6     # Shader uniform type: ivec3 (3 int)
-  SHADER_UNIFORM_IVEC4 = 7     # Shader uniform type: ivec4 (4 int)
-  SHADER_UNIFORM_SAMPLER2D = 8 # Shader uniform type: sampler2d
+  SHADER_UNIFORM_FLOAT = 0      # Shader uniform type: float
+  SHADER_UNIFORM_VEC2 = 1       # Shader uniform type: vec2 (2 float)
+  SHADER_UNIFORM_VEC3 = 2       # Shader uniform type: vec3 (3 float)
+  SHADER_UNIFORM_VEC4 = 3       # Shader uniform type: vec4 (4 float)
+  SHADER_UNIFORM_INT = 4        # Shader uniform type: int
+  SHADER_UNIFORM_IVEC2 = 5      # Shader uniform type: ivec2 (2 int)
+  SHADER_UNIFORM_IVEC3 = 6      # Shader uniform type: ivec3 (3 int)
+  SHADER_UNIFORM_IVEC4 = 7      # Shader uniform type: ivec4 (4 int)
+  SHADER_UNIFORM_UINT = 8       # Shader uniform type: unsigned int
+  SHADER_UNIFORM_UIVEC2 = 9     # Shader uniform type: uivec2 (2 unsigned int)
+  SHADER_UNIFORM_UIVEC3 = 10    # Shader uniform type: uivec3 (3 unsigned int)
+  SHADER_UNIFORM_UIVEC4 = 11    # Shader uniform type: uivec4 (4 unsigned int)
+  SHADER_UNIFORM_SAMPLER2D = 12 # Shader uniform type: sampler2d
 
   # enum ShaderAttributeDataType
   # Shader attribute data types
@@ -405,7 +410,7 @@ module Raylib
   typedef :int, :CameraMode
   typedef :int, :CameraProjection
   typedef :int, :NPatchLayout
-  callback :TraceLogCallback, [:int, :pointer, :int], :void
+  callback :TraceLogCallback, [:int, :pointer, :pointer], :void
   callback :LoadFileDataCallback, [:pointer, :pointer], :pointer
   callback :SaveFileDataCallback, [:pointer, :pointer, :int], :bool
   callback :LoadFileTextCallback, [:pointer], :pointer
@@ -2140,6 +2145,12 @@ module Raylib
       #   GetCharPressed : Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty
       #   @return [int]
       [:GetCharPressed, :GetCharPressed, [], :int],
+
+      # @!method GetKeyName(key)
+      #   GetKeyName : Get name of a QWERTY key on the current keyboard layout (eg returns string 'q' for KEY_A on an AZERTY keyboard)
+      #   @param key [int]
+      #   @return [const char *]
+      [:GetKeyName, :GetKeyName, [:int], :pointer],
 
       # @!method SetExitKey(key)
       #   SetExitKey : Set a custom key to exit program (default is ESC)
@@ -4250,13 +4261,13 @@ module Raylib
       [:TextToCamel, :TextToCamel, [:pointer], :pointer],
 
       # @!method TextToInteger(text)
-      #   TextToInteger : Get integer value from text (negative values not supported)
+      #   TextToInteger : Get integer value from text
       #   @param text [const char *]
       #   @return [int]
       [:TextToInteger, :TextToInteger, [:pointer], :int],
 
       # @!method TextToFloat(text)
-      #   TextToFloat : Get float value from text (negative values not supported)
+      #   TextToFloat : Get float value from text
       #   @param text [const char *]
       #   @return [float]
       [:TextToFloat, :TextToFloat, [:pointer], :float],
